--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -8,16 +8,16 @@
 .u-margin-top-medium{ margin-top: 4rem; }
 .u-margin-top-big{ margin-top: 8rem; }
 
-.padding-top-big { 
-    padding-top: 4.6rem; 
+// .padding-top-big { 
+//     padding-top: 4.6rem; 
 
-    @include respond(tab-port) {
-        padding-top: 8.4rem;
-    }
-}
-.padding-bottom-big { 
-    padding-bottom: 7.9rem; 
-}
+//     @include respond(tab-port) {
+//         padding-top: 8.4rem;
+//     }
+// }
+// .padding-bottom-big { 
+//     padding-bottom: 7.9rem; 
+// }
 
 .u-left { text-align: left; }
 .u-right { text-align: right; }
