--- a/sass/main.css
+++ b/sass/main.css
@@ -999,25 +999,26 @@ main .parallax-window {
 
 .section-contener .section-header {
   position: relative;
+  top: 50px;
   background-color: #fff;
   z-index: 1;
 }
 
 @media (max-width: 1200px) {
   .section-contener .section-header {
-    top: 13px;
+    top: 50px;
   }
 }
 
 @media (max-width: 900px) {
   .section-contener .section-header {
-    top: -9px;
+    top: 50px;
   }
 }
 
 @media (max-width: 600px) {
   .section-contener .section-header {
-    top: 9px;
+    top: 50px;
   }
 }
 
@@ -1070,6 +1071,9 @@ main .parallax-window {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  position: relative;
+  top: 75px;
+  height: 80%;
 }
 
 .section-about .row-left .section-about_photo {
@@ -1122,6 +1126,8 @@ main .parallax-window {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  position: relative;
+  top: 10px;
   height: 80%;
   padding: 50px;
   overflow-y: auto;
@@ -1130,6 +1136,7 @@ main .parallax-window {
 @media (max-width: 900px) {
   .section-about .row-right {
     padding: 8px;
+    top: 100px;
   }
 }
 
@@ -1187,13 +1194,15 @@ main .parallax-window {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  height: 100%;
+  -ms-flex-line-pack: center;
+      align-content: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
+  height: 100%;
   text-align: center;
+  position: relative;
+  top: 15%;
 }
 
 .section-certyfikaty-flex--box {
@@ -1331,6 +1340,18 @@ main .parallax-window {
   top: 0px;
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
+}
+
+@media (max-width: 1200px) {
+  .section-certyfikaty-flex {
+    top: 0;
+  }
+}
+
+@media (max-width: 900px) {
+  .section-certyfikaty-flex {
+    top: 0;
+  }
 }
 
 @media (max-width: 600px) {
