--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -5,17 +5,18 @@
 
         .section-header {
             position: relative;
+            top: 50px;
             background-color: $section-head-color;
             z-index: 1;
 
             @include respond(tab-land) {
-                top: 13px;
+                top: 50px;
             }
             @include respond(tab-port) {
-                top: -9px;
+                top: 50px;
             }
             @include respond(phone) {
-                top: 9px;
+                top: 50px;
             }
         }
     }
@@ -62,6 +63,9 @@
 
             &-left {
                 flex: 1;
+                position: relative;
+                top: 75px;
+                height: 80%;
 
                 .section-about_photo {
                     position: relative;
@@ -98,12 +102,15 @@
 
             &-right {
                 flex: 1;
+                position: relative;
+                top: 10px;
                 height: 80%;
                 padding: 50px;
                 overflow-y: auto;
 
                 @include respond(tab-port) {
                     padding: 8px;
+                    top: 100px;
                 }
                 @include respond(phone) {
                     padding: 0;
@@ -141,10 +148,13 @@
         &-flex {
             display: flex;
             flex-wrap: wrap;
-            height: 100%;
-            justify-content: center;
             align-content: center;
+            justify-content: center;
+            height: 100%;
             text-align: center;
+
+            position: relative;
+            top: 15%;
 
             &--box {
                 margin: 20px;   
@@ -306,6 +316,12 @@
                 transition: all .5s ease-in-out;
             }
 
+            @include respond(tab-land) {
+               top: 0;
+            }
+            @include respond(tab-port) {
+                top: 0;
+            }
             @include respond(phone) {
                 text-align: center;
             }
