--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -153,3 +153,15 @@
       box-shadow: 0 0 0 0 rgba(#5a99d4, 0);
     }
   }
+
+//   burger menu
+@keyframes fadeInRight {
+    0% {
+      opacity: 0;
+      left: 20%;
+    }
+    100% {
+      opacity: 1;
+      left: 0;
+    }
+  }
