--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -141,6 +141,10 @@
             font-size: 2.2rem;
         }
     }
+
+    @include respond(phone) {
+      display: none;
+    }
 }
 
 .welcome-text {
@@ -244,7 +248,7 @@
             width: 100px;
             opacity: .7;
         }
-      }
+    }
 }
 
 canvas {
@@ -252,4 +256,176 @@ canvas {
     height: 105vh;
     position: absolute;
 }
+
+// burger menu
+.a-burger {
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    overflow: hidden;
+    top: 5px;
+    
+    &:after {
+      content: '';
+      position: absolute;
+      background: white;
+      height: 2px;
+      width: 0%;
+      transform: translateX(-50%);
+      left: 50%;
+      bottom: 0;
+      transition: .35s ease;
+    }
+
+    &:hover:after,
+    &:focus:after,
+    &:active:after {
+      width: 100%;
+    }
+  }
+
+  .button_container {
+    display: none;
+    position: fixed;
+    top: 2%;
+    right: 2%;
+    height: 40px;
+    width: 40px;
+    cursor: pointer;
+    z-index: 100;
+    transition: opacity .25s ease;
+    
+    &:hover {
+      opacity: .7;
+    }
+    
+    &.active {
+      .top {
+        transform: translateY(11px) translateX(0) rotate(45deg);
+        background: black;
+      }
+      .middle {
+        opacity: 0;
+        background: black;
+      }
+      
+      .bottom {
+        transform: translateY(-11px) translateX(0) rotate(-45deg);
+        background: black;
+      }
+    }
+    
+    span {
+    background: white;
+    border: none;
+    height: 5px;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition:  all .35s ease;
+    cursor: pointer;
+      
+      &:nth-of-type(2) {
+        top: 11px;
+      }
+      
+      &:nth-of-type(3) {
+        top: 22px;
+      }
+    }
+    
+    @include respond (phone) {
+      display: block;
+    }
+  }
+
+.overlay {
+    position: fixed;
+    background: white;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0%;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity .35s, visibility .35s, height .35s;
+    overflow: hidden;
+    
+    &.open {
+      opacity: .9;
+      visibility: visible;
+      height: 100%;
+      
+      li {
+        animation: fadeInRight .5s ease forwards;
+        animation-delay: .35s;
+        
+        &:nth-of-type(2) {
+          animation-delay: .4s;
+        }
+        &:nth-of-type(3) {
+          animation-delay: .45s;
+        }
+        &:nth-of-type(4) {
+          animation-delay: .50s;
+        }
+      }
+    }
+    nav {
+      position: relative;
+      height: 70%;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 50px;
+      font-weight: 400;
+      text-align: center;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0 auto;
+      display: inline-block;
+      position: relative;
+      height: 100%; 
+      
+      li {
+        display: block;
+        height: 25%;
+        height: calc(100% / 4);
+        min-height: 50px;
+        position: relative;
+        opacity: 0;
+        
+        a {
+          display: block;
+          position: relative;
+          color: black;
+          text-decoration: none;
+          overflow: hidden;
+          
+          &:hover:after,
+           &:focus:after,
+           &:active:after {
+             width: 100%;
+           }
+          
+          &:after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            width: 0%;
+            transform: translateX(-50%);
+            height: 3px;
+            background: black;
+            transition: .35s;
+          }
+        }
+      }
+    }
+  }
 
