--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -362,16 +362,19 @@ canvas {
       
       li {
         animation: fadeInRight .5s ease forwards;
-        animation-delay: .35s;
+        animation-delay: .3s;
         
         &:nth-of-type(2) {
-          animation-delay: .4s;
+          animation-delay: .5s;
         }
         &:nth-of-type(3) {
-          animation-delay: .45s;
+          animation-delay: .7s;
         }
         &:nth-of-type(4) {
-          animation-delay: .50s;
+          animation-delay: .9s;
+        }
+        &:nth-of-type(5) {
+          animation-delay: 1.1s;
         }
       }
     }
