--- a/sass/main.css
+++ b/sass/main.css
@@ -477,7 +477,7 @@
 @-webkit-keyframes fadeInRight {
   0% {
     opacity: 0;
-    left: 20%;
+    left: 40%;
   }
   100% {
     opacity: 1;
@@ -488,7 +488,7 @@
 @keyframes fadeInRight {
   0% {
     opacity: 0;
-    left: 20%;
+    left: 40%;
   }
   100% {
     opacity: 1;
@@ -1112,23 +1112,28 @@ canvas {
 .overlay.open li {
   -webkit-animation: fadeInRight .5s ease forwards;
           animation: fadeInRight .5s ease forwards;
-  -webkit-animation-delay: .35s;
-          animation-delay: .35s;
+  -webkit-animation-delay: .3s;
+          animation-delay: .3s;
 }
 
 .overlay.open li:nth-of-type(2) {
-  -webkit-animation-delay: .4s;
-          animation-delay: .4s;
+  -webkit-animation-delay: .5s;
+          animation-delay: .5s;
 }
 
 .overlay.open li:nth-of-type(3) {
-  -webkit-animation-delay: .45s;
-          animation-delay: .45s;
+  -webkit-animation-delay: .7s;
+          animation-delay: .7s;
 }
 
 .overlay.open li:nth-of-type(4) {
-  -webkit-animation-delay: .50s;
-          animation-delay: .50s;
+  -webkit-animation-delay: .9s;
+          animation-delay: .9s;
+}
+
+.overlay.open li:nth-of-type(5) {
+  -webkit-animation-delay: 1.1s;
+          animation-delay: 1.1s;
 }
 
 .overlay nav {
