Changed color burger menu

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -319,7 +319,7 @@ canvas {
     }
     
     span {
-    background: white;
+    background: $primary-color;
     border: none;
     height: 5px;
     width: 100%;
