--- a/sass/main.css
+++ b/sass/main.css
@@ -1063,7 +1063,7 @@ canvas {
 }
 
 .button_container span {
-  background: white;
+  background: #ea9554;
   border: none;
   height: 5px;
   width: 100%;
