--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -2,6 +2,7 @@
 
     &-contener {
         height: 100%;
+        position: relative;
 
         .section-header {
             position: relative;
@@ -150,11 +151,12 @@
             flex-wrap: wrap;
             align-content: center;
             justify-content: center;
-            height: 100%;
+            // height: 100%;
             text-align: center;
 
-            position: relative;
-            top: 15%;
+            position: absolute;
+            top: 45%;
+            width: 100%;
 
             &--box {
                 margin: 20px;   
@@ -316,14 +318,9 @@
                 transition: all .5s ease-in-out;
             }
 
-            @include respond(tab-land) {
-               top: 0;
-            }
-            @include respond(tab-port) {
-                top: 0;
-            }
             @include respond(phone) {
                 text-align: center;
+                top: 30%;
             }
         }
     }
