adding global.scss

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 // BASE
 @import 'base/animations';
 @import 'base/base';
+@import 'base/global';
 @import 'base/typography';
 @import 'base/utilities';
 // COMPONENTS
