--- a/sass/main.css
+++ b/sass/main.css
@@ -5,6 +5,7 @@
 1200 - 1800: normal style aply
 1800++ Big desktop
 */
+@import url("https://fonts.googleapis.com/css?family=Roboto");
 @-webkit-keyframes start {
   0% {
     opacity: 0;
@@ -543,6 +544,13 @@ body {
   background: radial-gradient(circle closest-corner at center 125px, #222, black 60%) no-repeat;
   background-repeat: no-repeat;
   overflow-x: hidden;
+}
+
+.heading-small {
+  text-align: center;
+  font-size: 20px;
+  padding: 20px;
+  font-family: 'Roboto', sans-serif;
 }
 
 .heading-secondary {
@@ -1243,7 +1251,7 @@ main .parallax-window {
   }
 }
 
-.section-start {
+.section__start {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1257,7 +1265,7 @@ main .parallax-window {
   width: 100%;
 }
 
-.section-start .mouse-icon {
+.section__start .mouse-icon {
   position: absolute;
   bottom: 110px;
   opacity: .5;
@@ -1265,20 +1273,20 @@ main .parallax-window {
           animation: mouse-icon 4s ease-in;
 }
 
-.section-start .mouse-icon svg:hover path {
+.section__start .mouse-icon svg:hover path {
   stroke: #ea9554;
 }
 
-.section-start .mouse-icon svg:hover line {
+.section__start .mouse-icon svg:hover line {
   stroke: #ea9554;
 }
 
-.section-about {
+.section__about {
   height: 100vh;
   width: 100%;
 }
 
-.section-about .row {
+.section__about .row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1288,7 +1296,7 @@ main .parallax-window {
   height: 100%;
 }
 
-.section-about .row-left {
+.section__about .row-left {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -1297,18 +1305,18 @@ main .parallax-window {
   height: 80%;
 }
 
-.section-about .row-left .section-about_photo {
+.section__about .row-left .section-about_photo {
   position: relative;
 }
 
-.section-about .row-left .section-about_photo img {
+.section__about .row-left .section-about_photo img {
   width: 40rem;
   border-radius: 30px;
   margin-left: 90px;
 }
 
 @media (max-width: 900px) {
-  .section-about .row-left .section-about_photo img {
+  .section__about .row-left .section-about_photo img {
     width: 220px;
     height: 290px;
     border-radius: 30px;
@@ -1317,7 +1325,7 @@ main .parallax-window {
 }
 
 @media (max-width: 600px) {
-  .section-about .row-left .section-about_photo img {
+  .section__about .row-left .section-about_photo img {
     width: 150px;
     height: 190px;
     border-radius: 30px;
@@ -1326,7 +1334,7 @@ main .parallax-window {
 }
 
 @media (max-width: 900px) {
-  .section-about .row-left {
+  .section__about .row-left {
     -webkit-box-flex: 0;
         -ms-flex: 0;
             flex: 0;
@@ -1335,7 +1343,7 @@ main .parallax-window {
 }
 
 @media (max-width: 600px) {
-  .section-about .row-left {
+  .section__about .row-left {
     -webkit-box-flex: 0;
         -ms-flex: 0;
             flex: 0;
@@ -1343,7 +1351,7 @@ main .parallax-window {
   }
 }
 
-.section-about .row-right {
+.section__about .row-right {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -1355,36 +1363,36 @@ main .parallax-window {
 }
 
 @media (max-width: 900px) {
-  .section-about .row-right {
+  .section__about .row-right {
     padding: 8px;
     top: 100px;
   }
 }
 
 @media (max-width: 600px) {
-  .section-about .row-right {
+  .section__about .row-right {
     padding: 0;
   }
 }
 
-.section-about .row-right .section-about_text p {
+.section__about .row-right .section-about_text p {
   font-size: 2.4rem;
 }
 
 @media (max-width: 900px) {
-  .section-about .row-right .section-about_text p {
+  .section__about .row-right .section-about_text p {
     padding: 10px 30px 20px 30px;
   }
 }
 
 @media (max-width: 600px) {
-  .section-about .row-right .section-about_text p {
+  .section__about .row-right .section-about_text p {
     padding: 10px 30px 20px 30px;
   }
 }
 
 @media (max-width: 900px) {
-  .section-about .row {
+  .section__about .row {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -1393,7 +1401,7 @@ main .parallax-window {
 }
 
 @media (max-width: 600px) {
-  .section-about .row {
+  .section__about .row {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -1401,7 +1409,15 @@ main .parallax-window {
   }
 }
 
-.section-certyfikaty {
+.section__technology-learned {
+  background-color: #efefef;
+  height: 40vh;
+  width: 97%;
+  margin: auto;
+  border-radius: 5px;
+}
+
+.section__certyfikaty {
   height: 100vh;
   width: 100%;
   -webkit-box-align: center;
@@ -1409,7 +1425,7 @@ main .parallax-window {
           align-items: center;
 }
 
-.section-certyfikaty-flex {
+.section__certyfikaty .certyfikaty-flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1426,16 +1442,16 @@ main .parallax-window {
   width: 100%;
 }
 
-.section-certyfikaty-flex--box {
+.section__certyfikaty .certyfikaty-flex--box {
   margin: 20px;
 }
 
-.section-certyfikaty-flex--box .lightbox {
+.section__certyfikaty .certyfikaty-flex--box .lightbox {
   position: relative;
   overflow: hidden;
 }
 
-.section-certyfikaty-flex--box a.lightbox img {
+.section__certyfikaty .certyfikaty-flex--box a.lightbox img {
   height: 20rem;
   width: 30rem;
   border: 3px solid white;
@@ -1443,19 +1459,19 @@ main .parallax-window {
           box-shadow: 0px 0px 8px white;
 }
 
-.section-certyfikaty-flex--box:hover .loop-icon {
+.section__certyfikaty .certyfikaty-flex--box:hover .loop-icon {
   opacity: 1;
   bottom: -8px;
   position: relative;
 }
 
 @media (max-width: 900px) {
-  .section-certyfikaty-flex--box {
+  .section__certyfikaty .certyfikaty-flex--box {
     margin: 0;
   }
 }
 
-.section-certyfikaty-flex .loop-icon {
+.section__certyfikaty .certyfikaty-flex .loop-icon {
   position: relative;
   bottom: 25px;
   left: 0;
@@ -1473,7 +1489,7 @@ main .parallax-window {
   opacity: 0;
 }
 
-.section-certyfikaty-flex .lightbox-target {
+.section__certyfikaty .certyfikaty-flex .lightbox-target {
   position: fixed;
   top: -100%;
   width: 100%;
@@ -1485,7 +1501,7 @@ main .parallax-window {
   z-index: 2;
 }
 
-.section-certyfikaty-flex .lightbox-target img {
+.section__certyfikaty .certyfikaty-flex .lightbox-target img {
   margin: auto;
   position: absolute;
   top: 0;
@@ -1503,7 +1519,7 @@ main .parallax-window {
   transition: .5s ease-in-out;
 }
 
-.section-certyfikaty-flex .lightbox-target a.lightbox-close {
+.section__certyfikaty .certyfikaty-flex .lightbox-target a.lightbox-close {
   display: block;
   width: 50px;
   height: 50px;
@@ -1519,7 +1535,7 @@ main .parallax-window {
   transition: .5s ease-in-out;
 }
 
-.section-certyfikaty-flex .lightbox-target a.lightbox-close::before {
+.section__certyfikaty .certyfikaty-flex .lightbox-target a.lightbox-close::before {
   content: "";
   display: block;
   height: 30px;
@@ -1532,7 +1548,7 @@ main .parallax-window {
   transform: rotate(45deg);
 }
 
-.section-certyfikaty-flex .lightbox-target a.lightbox-close::after {
+.section__certyfikaty .certyfikaty-flex .lightbox-target a.lightbox-close::after {
   content: "";
   display: block;
   height: 30px;
@@ -1545,40 +1561,40 @@ main .parallax-window {
   transform: rotate(-45deg);
 }
 
-.section-certyfikaty-flex .lightbox-target:target {
+.section__certyfikaty .certyfikaty-flex .lightbox-target:target {
   opacity: 1;
   top: 0;
   bottom: 0;
   left: 0;
 }
 
-.section-certyfikaty-flex .lightbox-target:target img {
+.section__certyfikaty .certyfikaty-flex .lightbox-target:target img {
   max-height: 50%;
   max-width: 100%;
 }
 
-.section-certyfikaty-flex .lightbox-target:target a.lightbox-close {
+.section__certyfikaty .certyfikaty-flex .lightbox-target:target a.lightbox-close {
   top: 0px;
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
 }
 
 @media (max-width: 600px) {
-  .section-certyfikaty-flex {
+  .section__certyfikaty .certyfikaty-flex {
     text-align: center;
     top: 30%;
   }
 }
 
-.section-cv {
+.section__cv {
   height: 100vh;
 }
 
-.section-cv-box {
+.section__cv .cv-box {
   height: 100vh;
 }
 
-.section-cv-box .cv-img {
+.section__cv .cv-box .cv-img {
   width: 100%;
   height: 100%;
   background-image: url(/picture/cv-image.jpg);
@@ -1593,14 +1609,14 @@ main .parallax-window {
 }
 
 @media (max-width: 600px) {
-  .section-cv-box .cv-img {
+  .section__cv .cv-box .cv-img {
     height: 60%;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 60%, 0% 100%);
     clip-path: polygon(0 0, 100% 0, 100% 60%, 0% 100%);
   }
 }
 
-.section-cv-box .cv-contener {
+.section__cv .cv-box .cv-contener {
   position: absolute;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
@@ -1611,7 +1627,7 @@ main .parallax-window {
   bottom: 0;
 }
 
-.section-cv-box .cv-contener .open-popup {
+.section__cv .cv-box .cv-contener .open-popup {
   position: relative;
   top: 25%;
   font-size: 30px;
@@ -1622,7 +1638,7 @@ main .parallax-window {
   height: 100%;
 }
 
-.section-cv-box .popup {
+.section__cv .cv-box .popup {
   width: 100%;
   height: 100vh;
   display: none;
@@ -1631,7 +1647,7 @@ main .parallax-window {
   right: 0;
 }
 
-.section-cv-box .popup:before {
+.section__cv .cv-box .popup:before {
   content: "";
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -1645,7 +1661,7 @@ main .parallax-window {
           animation: open-cv-animation 0.6s cubic-bezier(0.83, 0.04, 0, 1.16) 0.65s both;
 }
 
-.section-cv-box .popup:after {
+.section__cv .cv-box .popup:after {
   content: "";
   width: 0;
   height: 2px;
@@ -1659,7 +1675,7 @@ main .parallax-window {
   margin-top: -1px;
 }
 
-.section-cv-box .popup-block {
+.section__cv .cv-box .popup-block {
   height: calc(100vh - 40px);
   padding: 5% 15%;
   -webkit-box-sizing: border-box;
@@ -1672,12 +1688,12 @@ main .parallax-window {
 }
 
 @media (max-width: 900px) {
-  .section-cv-box .popup-block {
+  .section__cv .cv-box .popup-block {
     font-size: 2rem;
   }
 }
 
-.section-cv-box .popup-close {
+.section__cv .cv-box .popup-close {
   width: 3.2rem;
   height: 3.2rem;
   text-indent: -9999px;
@@ -1696,38 +1712,38 @@ main .parallax-window {
   transition: transform .25s, opacity .25s, -webkit-transform .25s;
 }
 
-.section-cv-box .popup-close:hover {
+.section__cv .cv-box .popup-close:hover {
   -webkit-transform: rotate(270deg);
   transform: rotate(270deg);
   opacity: 1;
 }
 
 @media (max-width: 900px) {
-  .section-cv-box .popup-close {
+  .section__cv .cv-box .popup-close {
     width: 9rem;
     height: 9rem;
     font-size: 2rem;
   }
 }
 
-.section-cv-box #popup-cv:target {
+.section__cv .cv-box #popup-cv:target {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   z-index: 101;
 }
 
-.section-contact {
+.section__contact {
   height: 100vh;
   text-align: center;
 }
 
-.section-contact .box {
+.section__contact .box {
   height: 70%;
   position: relative;
 }
 
-.section-contact .box .wrapper {
+.section__contact .box .wrapper {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -1735,29 +1751,29 @@ main .parallax-window {
           transform: translate(-50%, -50%);
 }
 
-.section-contact .box .wrapper .contact-text span {
+.section__contact .box .wrapper .contact-text span {
   font-size: 5rem;
   color: #fff;
   font-weight: 600;
   text-shadow: 0px 0px 4px #ea9554;
 }
 
-.section-contact .box .wrapper .contact-text span:nth-child(1) {
+.section__contact .box .wrapper .contact-text span:nth-child(1) {
   text-transform: uppercase;
 }
 
-.section-contact .box .wrapper .contact-text span:nth-child(3) {
+.section__contact .box .wrapper .contact-text span:nth-child(3) {
   letter-spacing: .5rem;
 }
 
-.section-contact .box .wrapper .contact-text p {
+.section__contact .box .wrapper .contact-text p {
   font-size: 20px;
   letter-spacing: .8rem;
   color: #ea9554;
 }
 
 @media (max-width: 900px) {
-  .section-contact .box {
+  .section__contact .box {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
