--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -143,7 +143,7 @@
 
     &__technology-learned {
         background-color: #efefef;
-        height: 40vh;
+        height: auto;
         width: 97%;
         margin: auto;
         border-radius: 5px;
@@ -153,7 +153,26 @@
             .technology-learned {
                 
                 &--box {
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    justify-content: space-around;
+                    align-items: center;
+                    padding: 20px 0;
+                }
 
+                &--logo {
+                    height: 130px;
+
+                    &:nth-child(4) {
+                        height: 60px;
+                        width: 130px;;
+                    }
+
+                    &:nth-child(6) {
+                        height: 60px;
+                        width: 130px;;
+                    }
                 }
             }
         }
