changed font-family in section heading

--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -1,10 +1,18 @@
 // import czcionki Roboto
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
+// nagłówki sekcji
+.heading-secondary {
+    font-family: 'Roboto', sans-serif;
+    font-size: 3.5rem;
+    padding: 10px;
+    border-left: 15px solid $primary-color;
+}
+
 // małe nagłówki w sekcjach
 .heading-small {
-    text-align: center;
-    font-size: 20px;
-    padding: 20px;
     font-family: 'Roboto', sans-serif;
+    text-align: center;
+    font-size: 2rem;
+    padding: 20px;
 }
