--- a/sass/main.css
+++ b/sass/main.css
@@ -546,18 +546,18 @@ body {
   overflow-x: hidden;
 }
 
-.heading-small {
-  text-align: center;
-  font-size: 20px;
-  padding: 20px;
+.heading-secondary {
   font-family: 'Roboto', sans-serif;
+  font-size: 3.5rem;
+  padding: 10px;
+  border-left: 15px solid #ea9554;
 }
 
-.heading-secondary {
-  font-size: 3.5rem;
-  border-left: 15px solid #ea9554;
-  display: inline-block;
-  padding: 10px;
+.heading-small {
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  font-size: 2rem;
+  padding: 20px;
 }
 
 .u-center-text {
