--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -7,6 +7,7 @@
     font-size: 3.5rem;
     padding: 10px;
     border-left: 15px solid $primary-color;
+    display: inline-block;
 }
 
 // małe nagłówki w sekcjach
