--- a/sass/main.css
+++ b/sass/main.css
@@ -551,6 +551,7 @@ body {
   font-size: 3.5rem;
   padding: 10px;
   border-left: 15px solid #ea9554;
+  display: inline-block;
 }
 
 .heading-small {
