--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -25,17 +25,10 @@ html {
 
 body {
     box-sizing: border-box;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Roboto', serif;
     font-weight: 400;
     line-height: 1.7;
     color: #777;
-
-    background: radial-gradient(
-        circle closest-corner at center 125px,
-        #222,
-        black 60%
-    ) no-repeat;
-    
-    background-repeat: no-repeat;
-    overflow-x: hidden;
+    // background-color: #1a1a1a;
+    background-color: #262626;
 }
