--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -1,3 +1,10 @@
+.clip-path {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    clip-path: polygon(50% 0, 100% 0, 100% 100%, 10% 0%);
+    background-color: #e6e6e6;
+}
 .section {
 
     &-contener {
@@ -23,13 +30,12 @@
     }
 
     &__start {
+        position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 1000px;
-        background-color: #e6e6e6;
-        clip-path: polygon(50% 0, 100% 0, 100% 100%, 70% 100%);
+        // height: 1000px;
 
         .mouse-icon {
             position: absolute;
@@ -48,17 +54,19 @@
                 }
             }
         }
+
+        
     }
     
     
 
     &__about {
-        width: 100%;
+        // width: 100%;
 
         .row {
             display: flex;
             align-items: center;
-            height: 100%;
+            // height: 100%;
 
 
             &-left {
