--- a/sass/main.css
+++ b/sass/main.css
@@ -959,6 +959,7 @@ main .parallax-window {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
+  height: 60vh;
 }
 
 .section__start .mouse-icon {
