--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -35,7 +35,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-        // height: 1000px;
+        height: 60vh;
 
         .mouse-icon {
             position: absolute;
