--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -143,8 +143,20 @@
     position: absolute;
 
     .name {
-        font-size: 4.5rem;
+      display: block;
+      font-size: 4.5rem;
+      background: white;
+      width: 200px;
+      clip-path: polygon(0 0, 80% 0, 100% 100%, 0 100%);
+      margin-bottom: 10px;
       }
+      .surname {
+        display: block;
+        font-size: 4.5rem;
+        background: white;
+        width: 250px;
+        clip-path: polygon(0 0, 80% 0, 100% 100%, 0 100%);
+        }
 
       .logo {
 
