--- a/sass/main.css
+++ b/sass/main.css
@@ -675,7 +675,22 @@ footer {
 }
 
 .welcome-text .name {
+  display: block;
   font-size: 4.5rem;
+  background: white;
+  width: 200px;
+  -webkit-clip-path: polygon(0 0, 80% 0, 100% 100%, 0 100%);
+          clip-path: polygon(0 0, 80% 0, 100% 100%, 0 100%);
+  margin-bottom: 10px;
+}
+
+.welcome-text .surname {
+  display: block;
+  font-size: 4.5rem;
+  background: white;
+  width: 250px;
+  -webkit-clip-path: polygon(0 0, 80% 0, 100% 100%, 0 100%);
+          clip-path: polygon(0 0, 80% 0, 100% 100%, 0 100%);
 }
 
 .welcome-text .logo img {
