--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -36,24 +36,24 @@
         align-items: center;
         width: 100%;
         height: 60vh;
+// TODO: Chyba do usunięcia
+        // .mouse-icon {
+        //     position: absolute;
+        //     bottom: 110px;
+        //     opacity: .5;
+        //     animation: mouse-icon 4s ease-in;
 
-        .mouse-icon {
-            position: absolute;
-            bottom: 110px;
-            opacity: .5;
-            animation: mouse-icon 4s ease-in;
+        //     svg:hover {
 
-            svg:hover {
-
-                path {
-                    stroke: $primary-color;
+        //         path {
+        //             stroke: $primary-color;
                     
-                }
-                line {
-                    stroke: $primary-color;
-                }
-            }
-        }
+        //         }
+        //         line {
+        //             stroke: $primary-color;
+        //         }
+        //     }
+        // }
 
         
     }
