Changed home page

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,5 +1,5 @@
 $primary-color: #ea9554;
 $nav-bg-color: #444444;
-$nav-text-color: #fff;
+$primary-text-color: #fff;
 $section-head-color: #fff;
 $bg-color: #efefef;
