--- a/sass/main.css
+++ b/sass/main.css
@@ -6,6 +6,7 @@
 1800++ Big desktop
 */
 @import url("https://fonts.googleapis.com/css?family=Roboto");
+@import url("https://fonts.googleapis.com/css?family=Playfair+Display");
 @-webkit-keyframes arrow-down-show {
   0% {
     opacity: 0;
@@ -224,12 +225,14 @@
 *::before {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 html {
   font-size: 62.5%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 @media (max-width: 1200px) {
@@ -257,13 +260,12 @@ html {
 }
 
 body {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   font-family: 'Roboto', serif;
   font-weight: 400;
   line-height: 1.7;
-  color: #777;
-  background-color: #262626;
+  color: #fff;
+  background-color: #404040;
+  overflow: hidden;
 }
 
 .heading-secondary {
@@ -500,187 +502,105 @@ footer {
   width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem);
 }
 
-.left-underline {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-          box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -moz-osx-font-smoothing: grayscale;
-  position: relative;
-  overflow: hidden;
-}
-
-.left-underline:before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  left: 0;
-  right: 100%;
-  bottom: 0;
-  background: #ea9554;
-  height: 4px;
-  -webkit-transition-property: right;
-  transition-property: right;
-  -webkit-transition-duration: 0.15s;
-  transition-duration: 0.15s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
-}
-
-.left-underline:hover:before, .left-underline:focus:before, .left-underline:active:before {
-  right: 0;
-}
-
-.txt-change > .txt {
-  border-right: 0.2rem solid #777;
-}
-
 .header {
   width: 100%;
-  height: 70px;
-  background-color: "transparetn";
+  height: 50px;
   position: fixed;
   z-index: 2;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
-}
-
-.header .logo {
-  float: left;
-  position: fixed;
-  font-size: 30px;
-}
-
-.header .logo-img {
-  width: 60px;
-  position: relative;
-  top: 13px;
-  left: 10px;
-  opacity: .7;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-
-.header .logo span {
-  position: relative;
-  top: 6px;
-  left: 30px;
-  font-size: 20px;
-  color: #fff;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-
-@media (max-width: 900px) {
-  .header .logo span {
-    display: none;
-  }
-}
-
-.header--scroll {
-  -webkit-box-shadow: 0 4px 30px -5px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 4px 30px -5px rgba(0, 0, 0, 0.2);
-  height: 50px;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  background-color: #444444;
-}
-
-.header--scroll .logo-img {
-  width: 50px;
-  top: 5px;
-}
-
-.header--scroll .logo-text {
-  opacity: 0;
-}
-
-.header--scroll .navbar {
-  padding: 5px;
+  -webkit-box-shadow: 0px 0px 5px #262626;
+          box-shadow: 0px 0px 5px #262626;
 }
 
 .navbar {
-  text-align: right;
-  padding: 20px;
+  height: 100%;
+}
+
+.navbar__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.navbar__list--items {
+  list-style: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  width: 33.33%;
+  height: 100%;
+  text-align: center;
+  letter-spacing: 3px;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
 
-.navbar-contener {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  list-style: none;
-  text-align: center;
-}
-
-.navbar-items {
-  display: inline-block;
-  padding: 10px;
-  color: white;
-  font-size: 1.5rem;
-  cursor: pointer;
-  margin: 0 20px;
-  line-height: 18px;
-}
-
-.navbar-items a {
+.navbar__list--items a {
+  display: block;
+  height: 100%;
+  position: relative;
+  top: 10px;
   text-decoration: none;
-  color: #fff;
   font-size: 2.2rem;
+  color: inherit;
+}
+
+.navbar__list--items:hover {
+  background-color: #ea9554;
 }
 
 @media (max-width: 600px) {
-  .navbar {
+  .navbar__list {
     display: none;
   }
 }
 
 .welcome-text {
   position: absolute;
+  top: 200px;
+  left: 120px;
 }
 
 .welcome-text .name {
   display: block;
-  font-size: 4.5rem;
-  background: white;
-  width: 200px;
-  -webkit-clip-path: polygon(0 0, 80% 0, 100% 100%, 0 100%);
-          clip-path: polygon(0 0, 80% 0, 100% 100%, 0 100%);
+  font-size: 5.5rem;
+  width: 400px;
   margin-bottom: 10px;
+  text-align: center;
+  letter-spacing: 30px;
+  border: 5px solid #ea9554;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 .welcome-text .surname {
   display: block;
-  font-size: 4.5rem;
-  background: white;
-  width: 250px;
-  -webkit-clip-path: polygon(0 0, 80% 0, 100% 100%, 0 100%);
-          clip-path: polygon(0 0, 80% 0, 100% 100%, 0 100%);
+  font-size: 5.5rem;
+  width: 480px;
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: 25px;
+  border: 5px solid #ea9554;
+  margin-left: 40px;
+  text-transform: uppercase;
 }
 
-.welcome-text .logo img {
+.welcome-text .web-dev-text {
+  display: inline-block;
   position: relative;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 100px;
-  opacity: .7;
-}
-
-canvas {
-  width: 100%;
-  height: 105vh;
-  position: absolute;
+  top: 0px;
+  left: 40px;
+  font-size: 30px;
+  letter-spacing: 23px;
+  font-family: 'Playfair Display', 'Roboto', serif;
+  opacity: .8;
 }
 
 .a-burger {
@@ -897,58 +817,38 @@ main .parallax-window {
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0.7));
 }
 
-.clip-path {
-  position: absolute;
-  width: 100%;
-  height: 100vh;
-  -webkit-clip-path: polygon(50% 0, 100% 0, 100% 100%, 10% 0%);
-          clip-path: polygon(50% 0, 100% 0, 100% 100%, 10% 0%);
-  background-color: #e6e6e6;
-}
-
-.section-contener {
-  height: 100%;
-  position: relative;
-}
-
-.section-contener .section-header {
-  position: relative;
-  top: 50px;
-  background-color: #fff;
-  z-index: 1;
-}
-
-@media (max-width: 1200px) {
-  .section-contener .section-header {
-    top: 50px;
-  }
-}
-
-@media (max-width: 900px) {
-  .section-contener .section-header {
-    top: 50px;
-  }
-}
-
-@media (max-width: 600px) {
-  .section-contener .section-header {
-    top: 50px;
-  }
-}
-
 .section__start {
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  height: 60vh;
+  width: 100vw;
+  height: 100vh;
+}
+
+.section__start .clip-path {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  -webkit-clip-path: polygon(20% 0, 100% 0%, 100% 100%, 80% 100%);
+  clip-path: polygon(20% 0, 100% 0%, 100% 100%, 80% 100%);
+  background-color: #4d4d4d;
+}
+
+.section__about {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+}
+
+.section__about .clip-path {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  -webkit-clip-path: polygon(80% 100%, 100% 100%, 100% -33%, 20% 100%);
+  clip-path: polygon(80% 100%, 100% 100%, 100% -33%, 20% 100%);
+  background-color: #4d4d4d;
 }
 
 .section__about .row {
