--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,11 +3,12 @@
 *::before {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
 }
 
 html {
     font-size: 62.5%; // 1rem = 10px
+    box-sizing: border-box;
 
     @include respond(tab-land) {
         font-size: 50%; // 8px
@@ -24,10 +25,10 @@ html {
 }
 
 body {
-    box-sizing: border-box;
     font-family: 'Roboto', serif;
     font-weight: 400;
     line-height: 1.7;
-    color: #777;
-    background-color: #262626;
+    color: #fff;
+    background-color: #404040;
+    overflow: hidden;
 }
