--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -1,72 +1,41 @@
-.clip-path {
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    clip-path: polygon(50% 0, 100% 0, 100% 100%, 10% 0%);
-    background-color: #e6e6e6;
-}
 .section {
-
-    &-contener {
-        height: 100%;
-        position: relative;
-
-        .section-header {
-            position: relative;
-            top: 50px;
-            background-color: $section-head-color;
-            z-index: 1;
-
-            @include respond(tab-land) {
-                top: 50px;
-            }
-            @include respond(tab-port) {
-                top: 50px;
-            }
-            @include respond(phone) {
-                top: 50px;
-            }
-        }
-    }
 
     &__start {
         position: relative;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 60vh;
-// TODO: Chyba do usunięcia
-        // .mouse-icon {
-        //     position: absolute;
-        //     bottom: 110px;
-        //     opacity: .5;
-        //     animation: mouse-icon 4s ease-in;
+        width: 100vw;
+        height: 100vh;
 
-        //     svg:hover {
-
-        //         path {
-        //             stroke: $primary-color;
-                    
-        //         }
-        //         line {
-        //             stroke: $primary-color;
-        //         }
-        //     }
-        // }
-
-        
-    }
-    
-    
+        .clip-path {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            -webkit-clip-path: polygon(20% 0, 100% 0%, 100% 100%, 80% 100%);
+            clip-path: polygon(20% 0, 100% 0%, 100% 100%, 80% 100%);
+            background-color: #4d4d4d;
+        }
+    }   
 
     &__about {
-        // width: 100%;
+        position: relative;
+        width: 100vw;
+        height: 100vh;
+
+        .clip-path {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            -webkit-clip-path: polygon(80% 100%, 100% 100%, 100% -33%, 20% 100%);
+            clip-path: polygon(80% 100%, 100% 100%, 100% -33%, 20% 100%);
+            background-color: #4d4d4d;
+        }
 
         .row {
             display: flex;
             align-items: center;
-            // height: 100%;
 
 
             &-left {
