--- a/sass/main.css
+++ b/sass/main.css
@@ -851,36 +851,31 @@ main .parallax-window {
   background-color: #4d4d4d;
 }
 
-.section__about .row {
+.section__about .about__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: absolute;
+  height: 100%;
 }
 
-.section__about .row-left {
+.section__about .about__container .about--photo {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  position: relative;
-  top: 75px;
-  height: 80%;
 }
 
-.section__about .row-left .section-about_photo {
-  position: relative;
-}
-
-.section__about .row-left .section-about_photo img {
+.section__about .about__container .about--photo img {
   width: 40rem;
   border-radius: 30px;
   margin-left: 90px;
 }
 
 @media (max-width: 900px) {
-  .section__about .row-left .section-about_photo img {
+  .section__about .about__container .about--photo img {
     width: 220px;
     height: 290px;
     border-radius: 30px;
@@ -889,7 +884,7 @@ main .parallax-window {
 }
 
 @media (max-width: 600px) {
-  .section__about .row-left .section-about_photo img {
+  .section__about .about__container .about--photo img {
     width: 150px;
     height: 190px;
     border-radius: 30px;
@@ -898,7 +893,7 @@ main .parallax-window {
 }
 
 @media (max-width: 900px) {
-  .section__about .row-left {
+  .section__about .about__container {
     -webkit-box-flex: 0;
         -ms-flex: 0;
             flex: 0;
@@ -907,7 +902,7 @@ main .parallax-window {
 }
 
 @media (max-width: 600px) {
-  .section__about .row-left {
+  .section__about .about__container {
     -webkit-box-flex: 0;
         -ms-flex: 0;
             flex: 0;
@@ -915,48 +910,30 @@ main .parallax-window {
   }
 }
 
-.section__about .row-right {
+.section__about .about__container .about--text {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  position: relative;
-  top: 10px;
-  height: 80%;
-  padding: 50px;
-  overflow-y: auto;
 }
 
-@media (max-width: 900px) {
-  .section__about .row-right {
-    padding: 8px;
-    top: 100px;
-  }
-}
-
-@media (max-width: 600px) {
-  .section__about .row-right {
-    padding: 0;
-  }
-}
-
-.section__about .row-right .section-about_text p {
+.section__about .about__container .about--text p {
   font-size: 2.4rem;
 }
 
 @media (max-width: 900px) {
-  .section__about .row-right .section-about_text p {
+  .section__about .about__container .about--text p {
     padding: 10px 30px 20px 30px;
   }
 }
 
 @media (max-width: 600px) {
-  .section__about .row-right .section-about_text p {
+  .section__about .about__container .about--text p {
     padding: 10px 30px 20px 30px;
   }
 }
 
 @media (max-width: 900px) {
-  .section__about .row {
+  .section__about .about__container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -965,7 +942,7 @@ main .parallax-window {
 }
 
 @media (max-width: 600px) {
-  .section__about .row {
+  .section__about .about__container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
